Cambios en los index (principal, autor y editor)

--- a/consultar.html
+++ b/consultar.html
@@ -8,7 +8,7 @@
     <script src="Js/Scripts.js"></script>
 </head>
 <body style="background-color: azure;">
-    <div>Consultar al back</div>
+    <div>Consultar Usuaario</div>
     <div><button name="Btn1" onclick=Ingresar()>Ingresar</button></div>
     <div><button name="Btn2" onclick="SolicitarPeticion()">Consultar</button></div>
 </body>
