--- a/index.html
+++ b/index.html
@@ -11,27 +11,30 @@
   <div class="Container">
     <header class="Header"><img src="Imagenes/RevistaFantasyWorld.png" class="Dimensiones"></header>
       <nav class="Nav">
+        <div><h2>Menu Principal</h2></div>
         <br>
         <div>Iniciar Sesión</div>
         <br>
-        <div><a href="iniciar_sesion.html" target="I1" >Iniciar sesión</a></div>
+        <div><a href="iniciar_sesion.html" target="I1" >Autenticarse</a></div>
         <br>
-        <div>Usuario</div>
+        <div>Registrarse como Autor</div>
         <br>
-        <div><a href="ingresar_usuario.html" target="I1" >Ingresar usuario al backend</a></div>
-        <div><a href="buscar_usuario.html" target="I1" >Consultar usuario al backend</a></div>
+        <div><a href="ingresar_usuario.html" target="I1" >Registro</a></div>
+        <!--<div><a href="consultar.html" target="I1" >Consultar usuario al backend</a></div>
         <div><a href="actualizar_usuario.html" target="I1" >Actualizar usuario al backend</a></div>
-        <div><a href="eliminar_usuario.html" target="I1" >Eliminar usuario del backend</a></div>
-        <br>
-        <div>Mensaje</div>
-        <br>
-        <div><a href="mensaje.html" target="I1" >Ingresar mensaje al backend</a></div>
-        <div><a href="ver_mensajes.html" target="I1" >Consultar mensaje al backend</a></div>
-        <div><a href="" target="I1" >Actualizar mensaje al backend</a></div>
-        <div><a href="" target="I1" >Eliminar mensaje del backend</a></div>
+        <div><a href="eliminar_usuario.html" target="I1" >Eliminar usuario del backend</a></div>-->
+        <!---
+          <br>
+          <div>Mensaje</div>
+          <br>
+          <div><a href="mensaje.html" target="I1" >Ingresar mensaje al backend</a></div>
+          <div><a href="ver_mensajes.html" target="I1" >Consultar mensaje al backend</a></div>
+          <div><a href="" target="I1" >Actualizar mensaje al backend</a></div>
+          <div><a href="" target="I1" >Eliminar mensaje del backend</a></div>
+        -->
       </nav>
     <section class="Section"><iframe src="ver_articulos.html" frameborder="0" name="I1" class="Dimensiones"></iframe></section>
-    <footer class="Footer"><marquee>creditos</marquee></footer>
+    <footer class="Footer"><marquee>creditos: Andrés Felipe Rodríguez Grupo 40 Ciclo 3 Mision Tic 2022</marquee></footer>
   </div> 
 </body>
 
