--- a/index_autor.html
+++ b/index_autor.html
@@ -11,9 +11,11 @@
   <div class="Container">
     <header class="Header"><img src="Imagenes/RevistaFantasyWorld.png" class="Dimensiones"></header>
       <nav class="Nav">
+        <div><h2>Menu Autor</h2></div>
         <div><a href="ver_mensajes.html" target="I1" >Ver Mensajes</a></div>
-
+        <br>
         <div>Articulo</div>
+        <br>
         <div><a href="ingresar_articulo.html" target="I1" >Ingresar articulo al backend</a></div>
         <div><a href="consultar_articulo.html" target="I1" >Consultar articulo al backend</a></div>
         <div><a href="actualizar_articulo.html" target="I1" >Actualizar articulo al backend</a></div>
@@ -21,7 +23,7 @@
         <br>
       </nav>
     <section class="Section"><iframe src="" frameborder="0" name="I1" class="Dimensiones"></iframe></section>
-    <footer class="Footer"><marquee>creditos</marquee></footer>
+    <footer class="Footer"><marquee>creditos: Andrés Felipe Rodríguez Grupo 40 Ciclo 3 Mision Tic 2022</marquee></footer>
   </div> 
 </body>
 
