--- a/index_editor.html
+++ b/index_editor.html
@@ -11,12 +11,14 @@
   <div class="Container">
     <header class="Header"><img src="Imagenes/RevistaFantasyWorld.png" class="Dimensiones"></header>
       <nav class="Nav">
+        <div><h2>Menu Editor</h2></div>
+        <br>
         <div><a href="ver_autores.html" target="I1" >Ver Autores</a></div>
         <div><a href="publicar_articulos.html" target="I1" >Publicar Articulos</a></div>
         <div><a href="mensajes.html" target="I1" >Mensajes</a></div>
       </nav>
     <section class="Section"><iframe src="" frameborder="0" name="I1" class="Dimensiones"></iframe></section>
-    <footer class="Footer"><marquee>creditos</marquee></footer>
+    <footer class="Footer"><marquee>creditos: Andrés Felipe Rodríguez Grupo 40 Ciclo 3 Mision Tic 2022</marquee></footer>
   </div> 
 </body>
 
